# eros

./: .buildinfo  .clang-format  .gitignore  .pre-commit-config.yaml  ArmedStateManager_8h.html  ArmedStateManager_8h__dep__incl.map  ArmedStateManager_8h__dep__incl.md5  ArmedStateManager_8h__incl.map  ArmedStateManager_8h__incl.md5  BaseNodeProcess_8h.html  BaseNodeProcess_8h__dep__incl.dot  BaseNodeProcess_8h__dep__incl.map  BaseNodeProcess_8h__dep__incl.md5  BaseNodeProcess_8h__incl.dot  BaseNodeProcess_8h__incl.map  BaseNodeProcess_8h__incl.md5  BaseNode_8h.html  BaseNode_8h__dep__incl.dot  BaseNode_8h__dep__incl.map  BaseNode_8h__dep__incl.md5  BaseNode_8h__incl.dot  BaseNode_8h__incl.map  BaseNode_8h__incl.md5  CMakeLists.txt  ConvertUtility_8h.html  ConvertUtility_8h__dep__incl.map  ConvertUtility_8h__dep__incl.md5  ConvertUtility_8h__incl.map  ConvertUtility_8h__incl.md5  CoreUtility_8h.html  CoreUtility_8h__dep__incl.map  CoreUtility_8h__dep__incl.md5  CoreUtility_8h__incl.map  CoreUtility_8h__incl.md5  DataLoggerNode_8h.html  DataLoggerNode_8h__incl.dot  DataLoggerNode_8h__incl.map  DataLoggerNode_8h__incl.md5  DataLoggerProcess_8h.html  DataLoggerProcess_8h__dep__incl.dot  (+1230 more)
auto_template/package/{{cookiecutter.project_name}}/: package.xml
auto_template/package/{{cookiecutter.project_name}}/launch/: {{cookiecutter.node_name_binary}}.launch
auto_template/package/{{cookiecutter.project_name}}/nodes/: CMakeLists.txt
auto_template/{{cookiecutter.project_name}}/: CMakeLists.txt
auto_template/{{cookiecutter.project_name}}/launch/: {{cookiecutter.node_name_binary}}.launch
auto_template/{{cookiecutter.project_name}}/nodes/{{cookiecutter.node_classname}}/: CMakeLists.txt  {{cookiecutter.node_classname}}.cpp  {{cookiecutter.node_classname}}.h  {{cookiecutter.process_classname}}.cpp  {{cookiecutter.process_classname}}.h
doc/Features/ScenarioManagement/ExampleConfig/: CMakeLists.txt  DeviceList.json  SnapshotConfig.xml  SyncConfig.xml  package.xml
nodes/DataLogger/: CMakeLists.txt  DataLoggerNode.cpp  DataLoggerNode.h  DataLoggerProcess.cpp  DataLoggerProcess.h
nodes/DataLogger/test/: test_DataLoggerProcess.cpp
nodes/DataLoggerNode/src/: CMakeLists.txt  DataLoggerNode.cpp  DataLoggerProcess.cpp
nodes/DataLoggerNode/src/test/: test_DataLoggerProcess.cpp  (+1 more)
nodes/DataLoggerNode/test/: CMakeLists.txt  test_DataLoggerProcess.cpp  test_dataLoggerNode.cpp  test_dataLoggerNode.test
nodes/DiagnosticNode/src/: CMakeLists.txt  DiagnosticNode.cpp  DiagnosticNodeProcess.cpp
nodes/MasterNode/: CMakeLists.txt  MasterNode.cpp  MasterNode.h  MasterNodeProcess.cpp  MasterNodeProcess.h
nodes/MasterNode/doc/: MasterNode.md  MasterNodeClassDiagram.puml  MasterNodeSequenceDiagram.puml
nodes/MasterNode/include/: MasterNode.h  MasterNodeProcess.h
nodes/MasterNode/src/: MasterNode.cpp  MasterNodeProcess.cpp
nodes/MasterNode/test/: CMakeLists.txt  test_MasterNodeProcess.cpp  test_masterNode.cpp
nodes/SafetyNode/src/: ArmDisarmMonitor.cpp  CMakeLists.txt  SafetyNode.cpp  SafetyNodeProcess.cpp
nodes/SnapshotNode/src/: CMakeLists.txt  SnapshotNode.cpp  SnapshotProcess.cpp
nodes/SnapshotNode/test/: CMakeLists.txt  README.md  test_SnapshotProcess.cpp  test_snapshotNode.cpp  test_snapshotNode.test  test_snapshotNode_Master.cpp  test_snapshotNode_Master.test  test_snapshotNode_Slave.cpp  test_snapshotNode_Slave.test
nodes/SystemMonitor/: CMakeLists.txt  README.md  SystemMonitorNode.cpp  SystemMonitorNode.h  SystemMonitorProcess.cpp  SystemMonitorProcess.h  systemmonitor_node.cpp  systemmonitor_node.h
nodes/SystemMonitor/doc/: SystemMonitorDefinitionClassDiagram.puml  SystemMonitorNode.md  SystemMonitorNodeClassDiagram.puml  SystemMonitorNodeSequenceDiagram.puml  SystemMonitorUtilitiesClassDiagram.puml  SystemMonitorUtilityClassDiagram.puml  SystemMonitorWindowClassDiagram.puml  SystemMonitorWindowSequenceDiagram.puml
nodes/SystemMonitor/include/: BaseWindow.h  IWindow.h  SystemMonitorUtilities.h  SystemMonitorUtility.h  WindowDefinitions.h  Window_Definitions.h
nodes/SystemMonitor/node/: CMakeLists.txt  SystemMonitorNode.cpp  SystemMonitorNode.h  SystemMonitorProcess.cpp  SystemMonitorProcess.h
nodes/SystemMonitor/src/: BaseWindow.cpp  BaseWindow.h  CMakeLists.txt  SystemMonitorUtility.cpp  Window_Definitions.h
nodes/SystemMonitor/test/: CMakeLists.txt  test_systemMonitor.cpp  test_systemMonitor.test  test_systemmonitor_process.cpp
src/: ArmedStateManager.cpp  BaseNode.cpp  BaseNodeProcess.cpp  CMakeLists.txt  Logger.cpp  ResourceMonitor.cpp  Utility.cpp
src/Communication/MessageGeneration/: README.md  message.xml  message_generator.py
src/Configuration/: ReadDeviceList.py
src/Utility/: CMakeLists.txt
src/Utility/SystemMonitor/: CMakeLists.txt  README.md  SystemMonitorNodeProcess.cpp  SystemMonitorNodeProcess.h  systemmonitor_node.cpp  systemmonitor_node.h
src/Utility/TaskMonitor/: CMakeLists.txt  README.md  TaskMonitorNodeProcess.cpp  TaskMonitorNodeProcess.h  taskmonitor_node.cpp  taskmonitor_node.h
src/eros_diagnostic/: CMakeLists.txt  DiagnosticManager.cpp  DiagnosticUtility.cpp
src/eros_diagnostic/test/: CMakeLists.txt  test_diagnostic.cpp  test_diagnostic_manager.cpp
src/eros_utility/: CMakeLists.txt  ConvertUtility.cpp  CoreUtility.cpp  PrettyUtility.cpp
src/eros_utility/test/: CMakeLists.txt  test_convert_utility.cpp  test_core_utility.cpp
src/test/: CMakeLists.txt  test_armedstate_manager.cpp  test_base.cpp  test_baseNode.cpp  test_baseNode.test  test_definitions.cpp  test_diagnostics.cpp  test_logger.cpp  test_resourcemonitor.cpp  test_utility.cpp
util/SystemMonitor/: CMakeLists.txt  SystemMonitor.cpp  SystemMonitorProcess.cpp
util/SystemMonitor/Field/: BaseField.cpp  CMakeLists.txt  GenericField.cpp
util/SystemMonitor/Record/: BaseRecord.cpp  CMakeLists.txt  GenericRecord.cpp
util/SystemMonitor/RenderEngine/: CMakeLists.txt  RenderEngine.cpp  RenderWindow.cpp
util/SystemMonitor/Window/: BaseWindow.cpp  CMakeLists.txt  WindowTable.cpp  WindowText.cpp
util/SystemMonitor/test/: CMakeLists.txt  test_SystemMonitorProcess.cpp
(+1761 files in other folders)
