<package>
  <name>eros</name>
  <version>1.12.7</version>
  <description>The icarus_rover_v2 package</description>
  <maintainer email="davidgitz@gmail.com">dgitz</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/sensor_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

   <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>roscpp</run_depend>
    <run_depend>rospy</run_depend>
  <build_depend>cmake_modules</build_depend>
    <run_depend>cmake_modules</run_depend>


  <export>
  </export>
</package>
