project(eros_SystemMonitor)
add_subdirectory(Field)
add_subdirectory(Record)
add_subdirectory(Window)
add_subdirectory(RenderEngine)
add_library(systemMonitorProcess SystemMonitorProcess.cpp)
target_link_libraries(systemMonitorProcess ${catkin_LIBRARIES}  baseNodeProcess deviceWindow infoWindow nodeDiagnosticsWindow processWindow statusWindow renderEngine)

add_executable(system_monitor SystemMonitor.cpp) 
target_link_libraries(system_monitor ${catkin_LIBRARIES} ${Boost_LIBRARIES} systemMonitorProcess baseNode)
add_dependencies(system_monitor ${eros_EXPORTED_TARGETS})
add_subdirectory(test)
