<?xml version="1.0"?>
<package format="2">
  <name>{{cookiecutter.project_name}}</name>
  <version>0.0.0</version>
  <description>The {{cookiecutter.project_name}} package</description>
  <maintainer email="{{cookiecutter.author_email}}">{{cookiecutter.author_name}}</maintainer>
  <license>{{cookiecutter.license}}</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>eros</depend>
  <export>
  </export>
</package>
